Bugs fixed in 0.1.0pre4:
* Bug #8 : wrong (?) assert in regionMesh3D.hpp
* Bug #9 : updateElementFaces(true) requires updateElementEdges() first.
* Bug #15: data directory in testsuite

New in 0.1.0pre4:
* Lifev compiles entirely included all testsuite tests
* removed entirely testsuite/development: either created a proper 
  testsuite/test_{} test or moved the test to the lifev-sandbox
* added lifecore/testsuite for small tests programs related to lifecore
* life libraries should be std:: clean. no more using namespace std::
  it is a very bad programming pratice in the long run
* use Quality Management Test tool qmtest for the testsuite
* moved testsuite/official/* and testsuite/development/* in testsuite


New in 0.1.0pre3:
* new architecture using the autotools from the GNU
* new standard directory layout
* fixed some bugs and miscompilation in a few places