@@ -24,9 +24,9 @@ SUFFIXES	= .cpp .hpp .idl .c .h .f .F .o .moc
 
 include $(top_srcdir)/testsuite/Makefile.testsuite
 
-LDADD                   += -lg2c 
 TESTS			= test_mesh
 check_PROGRAMS		= test_mesh
 
 test_mesh_SOURCES	= main.cpp
 
+MOSTLYCLEANFILES	= testBuilders.dat
